update chat bot