@@ -3,9 +3,11 @@ package com.example.shose.server.controller.client;
 import com.example.shose.server.dto.SneakerAiDto;
 import com.example.shose.server.dto.request.ConsultRequest;
 import com.example.shose.server.dto.response.AiChatResponse;
+import com.example.shose.server.dto.response.SneakerChatResponse;
 import com.example.shose.server.dto.response.SneakerConsultResponse;
 import com.example.shose.server.service.OpentAiService;
 import com.example.shose.server.service.ProductService;
+import com.example.shose.server.util.AiResponseParser;
 import com.example.shose.server.util.ResponseObject;
 import com.example.shose.server.util.SneakerPromptBuilder;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -18,6 +20,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @RestController
     @RequestMapping("/client/ai")
@@ -45,23 +48,33 @@ public class ConsultSneakerRestController {
 
         String aiResult = opentAiService.callAI(prompt);
 
-        try {
-            AiChatResponse response =
-                    objectMapper.readValue(
-                            aiResult,
-                            new TypeReference<AiChatResponse>() {}
-                    );
+        SneakerChatResponse aiResponse =
+                AiResponseParser.parse(aiResult, SneakerChatResponse.class);
 
-            return new ResponseObject(response);
-
-        } catch (Exception e) {
-
-            AiChatResponse fallback = new AiChatResponse();
-            fallback.setMessage(aiResult);
-            fallback.setProducts(Collections.emptyList());
-
-            return new ResponseObject(fallback);
+        if (aiResponse.getProducts() == null || aiResponse.getProducts().isEmpty()) {
+            return new ResponseObject(
+                    Map.of(
+                            "message", aiResponse.getMessage(),
+                            "products", List.of()
+                    )
+            );
         }
+
+        List<String> ids = aiResponse.getProducts().stream()
+                .map(SneakerConsultResponse::getIdProductDetail)
+                .toList();
+
+        List<SneakerAiDto> details =
+                productService.getDetailsByIds(ids);
+
+
+        return new ResponseObject(
+                Map.of(
+                        "message", aiResponse.getMessage(),
+                        "products", details
+                )
+        );
+
     }
 
 
